@@ -1,4 +1,6 @@
+[WIP]
+* fix: psyleague show --active
 [0.1.1]
-* bugfixes (psyleague config, psyleague bot update -d, installation, linux support)
+* bugfixes: psyleague config, psyleague bot update -d, installation, linux support
 [0.1.0] 
 * initial version
